--- a/app/views/shared/pagination/_classic.haml
+++ b/app/views/shared/pagination/_classic.haml
@@ -1,17 +1,17 @@
 - if current_page > 1
-  =link_to "&lsaquo; First", "/#{link}/1"
+  =link_to "&lsaquo; First", url(controller, action, :page => 1)
 
 - if previous_page
-  =link_to "&laquo;", "/#{link}/#{previous_page}"
+  =link_to "&laquo;", url(controller, action, :page => previous_page)
 
 - (1..total_pages).each do |page|
   - if page == current_page
     = page
   - else
-    =link_to page, "/#{link}/#{page}"
+    =link_to page, url(controller, action, :page => page)
 
 - if next_page
-  =link_to '&raquo;', "/#{link}/#{next_page}"
+  =link_to '&raquo;', url(controller, action, :page => next_page)
 
 - if last_page
-  =link_to 'Last &rsaquo;', "/#{link}/#{last_page}"
+  =link_to 'Last &rsaquo;', url(controller, action, :page => last_page)
