--- a/app/views/shared/pagination/_brutal.haml
+++ b/app/views/shared/pagination/_brutal.haml
@@ -1,2 +1,2 @@
 - (1..total_pages).each do |page|
-  =link_to page, url(controller, action, params.merge(:page => page)) 
+  =link_to page, url(controller, action, params.merge("page" => page)) 
