--- a/app/views/shared/pagination/_digg.haml
+++ b/app/views/shared/pagination/_digg.haml
@@ -1,5 +1,5 @@
 - if previous_page
-  =link_to '&laquo; Prev', url(controller, action, params.merge(:page => previous_page))
+  =link_to '&laquo; Prev', url(controller, action, params.merge("page" => previous_page))
 - else
   &laquo; Prev
 
@@ -8,42 +8,42 @@
     - if page == current_page
       = page
     - else
-      =link_to page, url(controller, action, params.merge(:page => page))
+      =link_to page, url(controller, action, params.merge("page" => page))
 
 - elsif current_page < 9
   - (1..10).each do |page|
     - if page == current_page
       = page
     - else
-      =link_to page, url(controller, action, params.merge(:page => page))
+      =link_to page, url(controller, action, params.merge("page" => page))
   &hellip;
-  =link_to total_pages-1, url(controller, action, params.merge(:page => total_pages)-1)
-  =link_to total_pages, url(controller, action, params.merge(:page => total_pages))
+  =link_to total_pages-1, url(controller, action, params.merge("page" => total_pages)-1)
+  =link_to total_pages, url(controller, action, params.merge("page" => total_pages))
 
 - elsif current_page > total_pages - 8
-  =link_to 1, url(controller, action, params.merge(:page => )1)
-  =link_to 2, url(controller, action, params.merge(:page => )2)
+  =link_to 1, url(controller, action, params.merge("page" => )1)
+  =link_to 2, url(controller, action, params.merge("page" => )2)
   &hellip;
   - (total_pages-9..total_pages).each do |page|
     - if page == current_page
       = page
     - else
-      =link_to page, url(controller, action, params.merge(:page => page))
+      =link_to page, url(controller, action, params.merge("page" => page))
 
 - else
-  =link_to 1, url(controller, action, params.merge(:page => )1)
-  =link_to 2, url(controller, action, params.merge(:page => )2)
+  =link_to 1, url(controller, action, params.merge("page" => )1)
+  =link_to 2, url(controller, action, params.merge("page" => )2)
   &hellip;
   - (current_page-5..current_page+5).each do |page|
     - if page == current_page
       = page
     - else
-      =link_to page, url(controller, action, params.merge(:page => page))
+      =link_to page, url(controller, action, params.merge("page" => page))
   &hellip;
-  =link_to total_pages-1, url(controller, action, params.merge(:page => total_pages)-1)
-  =link_to total_pages, url(controller, action, params.merge(:page => total_pages))
+  =link_to total_pages-1, url(controller, action, params.merge("page" => total_pages)-1)
+  =link_to total_pages, url(controller, action, params.merge("page" => total_pages))
 
 - if next_page
-  =link_to 'Next &raquo;', url(controller, action, params.merge(:page => next_page))
+  =link_to 'Next &raquo;', url(controller, action, params.merge("page" => next_page))
 - else
   Next &raquo;
