--- a/app/views/shared/pagination/_classic.haml
+++ b/app/views/shared/pagination/_classic.haml
@@ -1,5 +1,5 @@
 - if current_page > 1
-  =link_to "&lsaquo; First", url(controller, action, params.merge("page" => )1)
+  =link_to "&lsaquo; First", url(controller, action, params.merge("page" => 1))
 
 - if previous_page
   =link_to "&laquo;", url(controller, action, params.merge("page" => previous_page))
