--- a/app/views/shared/pagination/_punbb.haml
+++ b/app/views/shared/pagination/_punbb.haml
@@ -1,6 +1,6 @@
 Pages:
 - if current_page > 3
-  =link_to 1, url(controller, action, params.merge("page" => )1)
+  =link_to 1, url(controller, action, params.merge("page" => 1))
   - if current_page != 4
     &hellip;
 
