--- a/views/bootstrap_classic.haml
+++ b/views/bootstrap_classic.haml
@@ -2,11 +2,11 @@
   %ul.pagination
     - if current_page > 1
       %li
-        =link_to "&lsaquo; First", url(controller, action, params.merge("page" => 1)), :class => :first_last
+        =link_to "First", url(controller, action, params.merge("page" => 1)), :class => :first_last
 
     - if previous_page
       %li
-        =link_to "&laquo;", url(controller, action, params.merge("page" => previous_page)), :class => :prev_next
+        =link_to "Prev", url(controller, action, params.merge("page" => previous_page)), :class => :prev_next
 
     - (1..total_pages).each do |page|
       %li
@@ -17,8 +17,8 @@
 
     - if next_page
       %li
-        =link_to '&raquo;', url(controller, action, params.merge("page" => next_page)), :class => :prev_next
+        =link_to 'Next', url(controller, action, params.merge("page" => next_page)), :class => :prev_next
 
     - if last_page
       %li
-        =link_to 'Last &rsaquo;', url(controller, action, params.merge("page" => last_page)), :class => :first_last
+        =link_to 'Last', url(controller, action, params.merge("page" => last_page)), :class => :first_last
