dont display too much pages

--- a/views/bootstrap_classic.haml
+++ b/views/bootstrap_classic.haml
@@ -8,7 +8,7 @@
       %li
         =link_to "Prev", url(controller, action, params.merge("page" => previous_page)), :class => :prev_next
 
-    - (1..total_pages).each do |page|
+    - ([1,current_page-5].max()..[total_pages,current_page+5].min()).each do |page|
       %li{:class => ( "active" if page == current_page) }
         =link_to page, url(controller, action, params.merge("page" => page))
 
